@@ -1,3 +1,8 @@
+Tue Oct 7 12:06:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	gtkcube.c, gtkgame.c: Make sure hint window is correct size in new layout.
+	gtkprefs.c, drawboard3d.c: Small memory fix
+
 Mon Oct 06 20:42:21 2003 GMT  Holger Bochnig <hbgg@gmx.net>
 
 	* gtkcube.c: bring output of double and take analysis in line
